dt-bindings: i2c: Document the RPMsg I2C controller
Document the RPMsg I2C controller bindings.

Signed-off-by: Maxime MERE <maxime.mere@st.com>
Signed-off-by: Arnaud Pouliquen <arnaud.pouliquen@foss.st.com>
Change-Id: I6ff6d59375c660c6b2ef06a7786628763929231b

--- a/Documentation/devicetree/bindings/vendor-prefixes.yaml
+++ b/Documentation/devicetree/bindings/vendor-prefixes.yaml
@@ -1093,6 +1093,8 @@ patternProperties:
     description: Shenzhen Roofull Technology Co, Ltd
   "^roseapplepi,.*":
     description: RoseapplePi.org
+  "^rpmsg,.*":
+    description: remote processor messaging Device Specification
   "^samsung,.*":
     description: Samsung Semiconductor
   "^samtec,.*":
